# elasticsearch-mcp-server

./: .dockerignore  Dockerfile  README.md  pyproject.toml
.github/: ct.yaml
.github/workflows/: docker-publish.yaml  helm-chart.yaml
docker/: entrypoint.sh
helm/elasticsearch-mcp-server/: Chart.yaml  README.md  values.yaml
helm/elasticsearch-mcp-server/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  secret.yaml  service.yaml  serviceaccount.yaml
helm/elasticsearch-mcp-server/tests/: deployment_credentials_test.yaml  deployment_server_test.yaml  hpa_test.yaml  ingress_test.yaml  secret_test.yaml
src/: auth.py  server.py
src/clients/: base.py
src/clients/common/: alias.py  analyzer.py  cluster.py  data_stream.py  document.py  general.py  index.py
src/tools/: alias.py  index.py
