[project]
name = "elasticsearch-mcp-server"
version = "2.0.19"
description = "MCP Server for interacting with Elasticsearch and OpenSearch"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "elasticsearch==8.17.2",
    "opensearch-py==2.8.0",
    "mcp>=1.17.0,<2.0.0",
    "python-dotenv==1.1.0",
    "fastmcp==2.13.0",
    "uvicorn>=0.35.0",
    "pydantic>=2.11.0,<2.12.0",
    "anthropic==0.49.0",
    "tomli==2.2.1",
    "tomli-w==1.2.0",
]

[project.license]
file = "LICENSE"

[project.scripts]
elasticsearch-mcp-server = "src.server:elasticsearch_mcp_server"
opensearch-mcp-server = "src.server:opensearch_mcp_server"

[tool.hatch.build.targets.wheel]
packages = [
    "src",
]

[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"
